--- a/trabalho1/experiencia.html
+++ b/trabalho1/experiencia.html
@@ -9,35 +9,54 @@
 
 <body>
   <main>
+    <a href="index.html">voltar</a>
     <h1>Experiências Profissionais</h1>
     <figure>
-      <img height="120" width="120" src="/images/perfil.webp" alt="Foto de Perfil" />
+      <img height="120" width="120" src="./images/perfil.webp" alt="Foto de Perfil" />
       <figcaption>Fulano de Tal</figcaption>
     </figure>
     <hr>
 
- <table>
-  <tr>
-    <th>Empresa</th>
-    <th>Tempo de Atuação</th>
-    <th>Função</th>
-  </tr>
-  <tr>
-    <td>Empresa Ficticia</td>
-    <td>2 anos</td>
-    <td>Desenvolvedor back-end Jr</td>
-  </tr>
-  <tr>
-    <td>Fake inc</td>
-    <td>5 anos</td>
-    <td>Desenvolvedor Back-end Pleno</td>
-  </tr>
-  <tr>
-    <td>Empresa Generica</td>
-    <td>3 anos</td>
-    <td>Desenvolvedor Back-end Sr</td>
-  </tr>
-</table> 
+    <h2>Índice</h2>
+    <ul>
+    <li><a href="#empresas">Empresas</a></li>
+    <li><a href="#formacao">Formação</a></li>
+    </ul>
+
+    <hr>
+
+    <h2 id="empresas">Empresas</h2>
+    <table>
+      <tr>
+        <th>Empresa</th>
+        <th>Tempo de Atuação</th>
+        <th>Função</th>
+      </tr>
+      <tr>
+        <td>Empresa Ficticia</td>
+        <td>2 anos</td>
+        <td>Desenvolvedor back-end Jr</td>
+      </tr>
+      <tr>
+        <td>Fake inc</td>
+        <td>5 anos</td>
+        <td>Desenvolvedor Back-end Pleno</td>
+      </tr>
+      <tr>
+        <td>Empresa Generica</td>
+        <td>3 anos</td>
+        <td>Desenvolvedor Back-end Sr</td>
+      </tr>
+    </table>
+    <hr>
+    <h2 id="formacao">Formações</h2>
+    <p>
+      Formação em Ciência da computação na <abbr>UFU</abbr> (Universidade Federal de Uberlândia) (2022).
+    </p>
+    <p>
+      Mestrado em Ciência da Computação na <abbr>UNICAMP</abbr> (Universidade Estadual de Campinas) (2025)
+    </p>
+
   </main>
 </body>
 
